airshift - fixed download image height problem

--- a/Day- Ex5 - Airshift/css/style.css
+++ b/Day- Ex5 - Airshift/css/style.css
@@ -6518,7 +6518,7 @@ p {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   background-color: #eee;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 400; }
   .donwload-form .form-control:focus {
     outline: 0; }
@@ -6625,12 +6625,15 @@ p {
   font-size: 1.2rem; }
 
 .section-download-app img {
-  height: 2.5rem; }
+  height: 3.05rem; }
+.section-download-app .download-area .col-sm-4,
+.section-download-app .download-area .col-4 {
+  padding-left: 5px;
+  padding-right: 5px; }
 .section-download-app .download-text {
   color: #4a4a4a;
-  font-weight: 700; }
-.section-download-app .form-control {
-  background-color: #eee; }
+  font-weight: 700;
+  font-size: 0.95rem; }
 
 .work-lists {
   list-style: none;
